objects/Invoice_Statement__c.object
<CustomObject>
    <fields>
        <fullName>Date2__c</fullName>
        <label>Date2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date3__c</fullName>
        <formula>IF(Date2__c &lt;= TODAY(), &quot;今日以下&quot;, &quot;明日&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date2__c - TODAY()</inlineHelpText>
        <label>Date3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Invoice Statement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Statements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>